--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/todos.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
+
+
     <title>Harry Potter Todo List App</title>
 
 
@@ -15,12 +20,12 @@
 
 <body>
     <div id="container">
-        <h1>To-Do List</h1>
-        <input type="text">
+        <h1>To-Do List <i class="far fa-plus-square"></i></h1>
+        <input type="text" placeholder="Add a new Todo">
         <ul>
-            <li><span>X</span> Go to Potion's Class</li>
-            <li><span>X</span> Buy Ropes</li>
-            <li><span>X</span> Visit Hagrid</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Go to Potion's Class</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Buy Ropes</li>
+            <li><span><i class="far fa-trash-alt"></i></span> Visit Hagrid</li>
         </ul>
     </div>
 
